# bir_open_manipulator_p

./: .gitignore  README.md
bir_open_manipulator_p_joy_control/: CMakeLists.txt  README.md  package.xml
bir_open_manipulator_p_joy_control/launch/: bir_omp_joystick_realWorld.launch  bir_omp_joystick_simulation.launch  omp_joystick_simulation.launch
bir_open_manipulator_p_joy_control/src/: bir_omp_joystick_realWorld.py  bir_omp_joystick_simulation.py  bir_omp_plot_real_time.py  bir_omp_serial_commander.py  bir_omp_serial_read.py  omp_joystick_realWorld.py  omp_joystick_simulation.py  plotting_real_time.py
bir_open_manipulator_p_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
bir_open_manipulator_p_moveit/config/: bir_omp_benchmark_settings.yaml  open_manipulator_p.srdf
bir_open_manipulator_p_moveit/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-10-4555339557870446835.wt  collection-10-5817979727033468650.wt  collection-13-4555339557870446835.wt  collection-13-5817979727033468650.wt  collection-15-4555339557870446835.wt  collection-15-5817979727033468650.wt  collection-2-4555339557870446835.wt  collection-2-5817979727033468650.wt  collection-20-6778120253699551092.wt  collection-20-8331738473641801762.wt  collection-21-4555339557870446835.wt  collection-21-5817979727033468650.wt  collection-24-4555339557870446835.wt  collection-24-5817979727033468650.wt  collection-27-4555339557870446835.wt  collection-27-5817979727033468650.wt  collection-30-4555339557870446835.wt  collection-30-5817979727033468650.wt  collection-4-4555339557870446835.wt  collection-4-5817979727033468650.wt  collection-41-4555339557870446835.wt  collection-41-5817979727033468650.wt  collection-7-4555339557870446835.wt  collection-7-5817979727033468650.wt  collection-9-6778120253699551092.wt  collection-9-8331738473641801762.wt  (+41 more)
bir_open_manipulator_p_with_cam_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
bir_open_manipulator_p_with_gripper_cam_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
open_manipulator_p_controller/: CMakeLists.txt
open_manipulator_p_libs/: CMakeLists.txt
(+181 files in other folders)
