<?xml version="1.0"?>
<package format="2">
  <name>bir_open_manipulator_p_joy_control</name>
  <version>0.0.0</version>
  <description>The omp_joy_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kaikewesley@hotmail.com">kwr</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
